# Hyprland-dotfiles

./: .zshrc  README.md  install.sh  pyproject.toml  sddm_theme.conf
Builder/src/adapters/logger/: logger.py
Builder/src/adapters/system_manipulation/: component_installer.py  packages.py  post_install_configurator.py  preconfigure_system.py
Builder/src/adapters/system_manipulation/installers/driver_installers/: base_driver_installer.py
Builder/src/adapters/user_interfaces/: driver_install_interface.py
Builder/src/application/configurator/: enums.py
Builder/src/application/configurator/interfaces/: system_manipulators.py
Builder/src/application/configurator/services/: driver_installer_service.py  preconfigure_system_service.py
config/: QtProject.conf
config/alacritty/: alacritty.toml
config/gtk-3.0/: settings.ini
config/hypr/: hyprland.conf  hyprpaper.conf
config/hypr/hyprland/: animations.conf  autostart.conf  env.conf  general.conf  keybindings.conf  rules.conf
config/swaync/: config.json  style.css
config/waybar/: config.jsonc  style.css
config/wofi/: config  style.css
config/xsettingsd/: xsettingsd.conf
