[tool.poetry]
name = "builder"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{ include = "src", from = "Builder" }]

[tool.poetry.dependencies]
python = "^3.13"
argparse = "^1.4.0"
pydantic-settings = "^2.8.1"
attrs = "^25.3.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
